; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_rt5682.c_rt5682_hp_event.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_rt5682.c_rt5682_hp_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dapm_widget = type { i32 }
%struct.snd_kcontrol = type { i32 }
%struct.snd_soc_component = type { i32 }

@RT5682_HP_LOGIC_CTRL_2 = common dso_local global i32 0, align 4
@RT5682_HP_CTRL_2 = common dso_local global i32 0, align 4
@RT5682_DEPOP_1 = common dso_local global i32 0, align 4
@RT5682_DAC_ADC_DIG_VOL1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dapm_widget*, %struct.snd_kcontrol*, i32)* @rt5682_hp_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt5682_hp_event(%struct.snd_soc_dapm_widget* %0, %struct.snd_kcontrol* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.snd_soc_dapm_widget*, align 8
  %6 = alloca %struct.snd_kcontrol*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.snd_soc_component*, align 8
  store %struct.snd_soc_dapm_widget* %0, %struct.snd_soc_dapm_widget** %5, align 8
  store %struct.snd_kcontrol* %1, %struct.snd_kcontrol** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.snd_soc_dapm_widget*, %struct.snd_soc_dapm_widget** %5, align 8
  %10 = getelementptr inbounds %struct.snd_soc_dapm_widget, %struct.snd_soc_dapm_widget* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.snd_soc_component* @snd_soc_dapm_to_component(i32 %11)
  store %struct.snd_soc_component* %12, %struct.snd_soc_component** %8, align 8
  %13 = load i32, i32* %7, align 4
  switch i32 %13, label %37 [
    i32 128, label %14
    i32 129, label %27
  ]

14:                                               ; preds = %3
  %15 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %16 = load i32, i32* @RT5682_HP_LOGIC_CTRL_2, align 4
  %17 = call i32 @snd_soc_component_write(%struct.snd_soc_component* %15, i32 %16, i32 18)
  %18 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %19 = load i32, i32* @RT5682_HP_CTRL_2, align 4
  %20 = call i32 @snd_soc_component_write(%struct.snd_soc_component* %18, i32 %19, i32 24576)
  %21 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %22 = load i32, i32* @RT5682_DEPOP_1, align 4
  %23 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %21, i32 %22, i32 96, i32 96)
  %24 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %25 = load i32, i32* @RT5682_DAC_ADC_DIG_VOL1, align 4
  %26 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %24, i32 %25, i32 192, i32 128)
  br label %38

27:                                               ; preds = %3
  %28 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %29 = load i32, i32* @RT5682_DEPOP_1, align 4
  %30 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %28, i32 %29, i32 96, i32 0)
  %31 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %32 = load i32, i32* @RT5682_HP_CTRL_2, align 4
  %33 = call i32 @snd_soc_component_write(%struct.snd_soc_component* %31, i32 %32, i32 0)
  %34 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %35 = load i32, i32* @RT5682_DAC_ADC_DIG_VOL1, align 4
  %36 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %34, i32 %35, i32 192, i32 0)
  br label %38

37:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %39

38:                                               ; preds = %27, %14
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %37
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local %struct.snd_soc_component* @snd_soc_dapm_to_component(i32) #1

declare dso_local i32 @snd_soc_component_write(%struct.snd_soc_component*, i32, i32) #1

declare dso_local i32 @snd_soc_component_update_bits(%struct.snd_soc_component*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
